feat: add upcoming events
