# angular-hub/src/server/routes/v1/communities/index.get.ts
@@ -1,4 +1,4 @@
 import { defineEventHandler } from 'h3';
-import communities from '../../../public/assets/data/community.json';
+import communities from '../../../../public/assets/data/community.json';
 
 export default defineEventHandler(() => communities);
